@@ -1,4 +1,2 @@
 gui_name = "FOSS Barcode Tool"
 gui_version = "0.0.5"
-# Used for checksums to direct to host site, change as needed
-host_site = "http://compliance.linuxfoundation.org/foss-products/"
