@@ -16,6 +16,7 @@
     <li {% if tab_input %}id="current"{% endif %}><a href="/barcode/input">Create<br>Compliance Record</a></li>
     <li {% if tab_records %}id="current"{% endif %}><a href="/barcode/records">Review<br>Compliance Records</a></li>
     <li {% if tab_search %}id="current"{% endif %}><a href="/barcode/search">Search<br>Compliance Records</a></li>
+    <li {% if tab_search %}id="current"{% endif %}><a href="/barcode/sysconfig">System<br>Configuration</a></li>
     <li><a href="/barcode/documentation">Tool<br>Documentation</a></li>
   </ul>
 </div>
