@@ -10,7 +10,8 @@
   <ul>
     <li><a href="/barcode/input">Create<br>Compliance Record</a></li>
     <li><a href="/barcode/records">Review<br>Compliance Records</a></li>
-    <li><a href="/barcode/records">Search<br>Compliance Records</a></li>
+    <li><a href="/barcode/search">Search<br>Compliance Records</a></li>
+    <li><a href="/barcode/sysconfig">System<br>Configuration</a></li>
     <li id="current"><a href="/barcode/documentation">Tool<br>Documentation</a></li>
   </ul>
 </div>
