@@ -11,6 +11,7 @@ urlpatterns = patterns('',
     (r'^barcode/documentation/$', 'fossbarcode.barcode.views.documentation'),
     (r'^barcode/records/$', 'fossbarcode.barcode.views.records'),
     (r'^barcode/search/$', 'fossbarcode.barcode.views.search'),
+    (r'^barcode/sysconfig/$', 'fossbarcode.barcode.views.sysconfig'),
     (r'^barcode/taskstatus/$', 'fossbarcode.barcode.views.taskstatus'),
     (r'^barcode/(?P<record_id>\d+)/detail/$', 'fossbarcode.barcode.views.detail'),
     (r'^site_media/(?P<path>.*)$', 'django.views.static.serve',
